DBZ-6110 Backport latest testsuite